[gd_scene load_steps=17 format=3 uid="uid://4ntd0v7krgom"]

[ext_resource type="PackedScene" uid="uid://fsw37e6bhjnn" path="res://assets/scenes/program_window.tscn" id="1_ifvio"]
[ext_resource type="Script" uid="uid://ymsft3s6lyd1" path="res://assets/scenes/programs/optipng_compress/compress_window.gd" id="2_4j6qr"]
[ext_resource type="PackedScene" uid="uid://dfbbwpc8mey0f" path="res://assets/scenes/parameters/parameter_filepath.tscn" id="2_eai3l"]
[ext_resource type="Script" uid="uid://dk66k0b0qeyc5" path="res://assets/scripts/subwindow_locker.gd" id="4_2ysao"]
[ext_resource type="Texture2D" uid="uid://dobelhvexued5" path="res://assets/icons/Progress1.svg" id="5_yc6ja"]
[ext_resource type="Texture2D" uid="uid://ciecbyccj4ly0" path="res://assets/icons/Progress2.svg" id="6_ih3n5"]
[ext_resource type="Texture2D" uid="uid://cci2wg3061fgr" path="res://assets/icons/Progress3.svg" id="7_7pk0v"]
[ext_resource type="Texture2D" uid="uid://7sko2bbqlc0f" path="res://assets/icons/Progress4.svg" id="8_yooql"]
[ext_resource type="Texture2D" uid="uid://cjbls0use7e1i" path="res://assets/icons/Progress5.svg" id="9_003ew"]
[ext_resource type="Texture2D" uid="uid://8lo0qtgwop2m" path="res://assets/icons/Progress6.svg" id="10_1qg0x"]
[ext_resource type="Texture2D" uid="uid://dvcurv44d1wax" path="res://assets/icons/Progress7.svg" id="11_g22mn"]
[ext_resource type="Texture2D" uid="uid://dt5l6jve4grg2" path="res://assets/icons/Progress8.svg" id="12_ttjaq"]
[ext_resource type="PackedScene" uid="uid://bhvbnwx78yr8x" path="res://assets/scenes/image_preview.tscn" id="13_yc6ja"]

[sub_resource type="ViewportTexture" id="ViewportTexture_hs377"]
viewport_path = NodePath("panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel/subwindow_locker/texture_rect/sub_viewport")

[sub_resource type="SpriteFrames" id="SpriteFrames_ovimq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_yc6ja")
}, {
"duration": 1.0,
"texture": ExtResource("6_ih3n5")
}, {
"duration": 1.0,
"texture": ExtResource("7_7pk0v")
}, {
"duration": 1.0,
"texture": ExtResource("8_yooql")
}, {
"duration": 1.0,
"texture": ExtResource("9_003ew")
}, {
"duration": 1.0,
"texture": ExtResource("10_1qg0x")
}, {
"duration": 1.0,
"texture": ExtResource("11_g22mn")
}, {
"duration": 1.0,
"texture": ExtResource("12_ttjaq")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="GDScript" id="GDScript_u5sgf"]
script/source = "extends VBoxContainer

var progress_done : int :
	get: return floori($total_progress_bar.value)
	set(value):
		$total_progress_bar.value = value
		$files_completed/label_progress_done.text = str(value)
var progress_todo : int :
	get: return floori($total_progress_bar.max_value)
	set(value):
		$total_progress_bar.max_value = value
		$files_completed/label_progress_todo.text = str(value)

var _bytes_reduced : int
var bytes_reduced : int :
	get: return _bytes_reduced
	set(value):
		_bytes_reduced = value
		$bytes_reduced/label_bytes.text = bytes_to_string(value)

func set_progress_done(value: int) -> void:
	progress_done = value
		
func set_progress_todo(value: int) -> void:
	progress_todo = value
	
func add_bytes_reduced(value: int) -> void:
	bytes_reduced += value

func clear_bytes_reduced() -> void:
	bytes_reduced = 0
	

static func bytes_to_string(bytes: int) -> String:	
	if bytes < 1024:
		return str(bytes) + \" B\"
	if bytes < 1024 * 1024:
		return \"%.2f KB\" % (float(bytes) / 1024.0)
	if bytes < 1024 * 1024 * 1024:
		return \"%.2f MB\" % (float(bytes) / (1024.0 * 1024.0))
	return \"%.2f GB\" % (float(bytes) / (1024.0 * 1024.0 * 1024.0))
	
"

[node name="compress_window" node_paths=PackedStringArray("parameters") instance=ExtResource("1_ifvio")]
script = ExtResource("2_4j6qr")
script_path = "res://assets/scenes/programs/optipng_compress/compress.py"
parameters = [NodePath("panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel/scroll_container/margin_container/parameter_list/optipng_path"), NodePath("panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel/scroll_container/margin_container/parameter_list/input")]

[node name="label" parent="panel_container/margin_container/v_box_container/h_box_container" index="1"]
text = "PNG Image Compression"

[node name="parameter_panel" parent="panel_container/margin_container/v_box_container/control/h_split_container" index="0"]
custom_minimum_size = Vector2(500, 0)

[node name="optipng_path" parent="panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel/scroll_container/margin_container/parameter_list" index="0" instance=ExtResource("2_eai3l")]
layout_mode = 2
save_to_prefs = true

[node name="label" parent="panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel/scroll_container/margin_container/parameter_list/optipng_path" index="0"]
text = "OptiPNG Path"

[node name="input" parent="panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel/scroll_container/margin_container/parameter_list" index="1" instance=ExtResource("2_eai3l")]
layout_mode = 2
save_to_prefs = true

[node name="label" parent="panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel/scroll_container/margin_container/parameter_list/input" index="0"]
text = "Input Path"

[node name="subwindow_locker" type="Control" parent="panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel" index="1"]
visible = false
layout_mode = 2
script = ExtResource("4_2ysao")

[node name="texture_rect" type="TextureRect" parent="panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel/subwindow_locker" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = SubResource("ViewportTexture_hs377")

[node name="sub_viewport" type="SubViewport" parent="panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel/subwindow_locker/texture_rect" index="0"]
transparent_bg = true
size = Vector2i(64, 64)

[node name="sprite_2d" type="AnimatedSprite2D" parent="panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel/subwindow_locker/texture_rect/sub_viewport" index="0"]
sprite_frames = SubResource("SpriteFrames_ovimq")
frame_progress = 0.271336
centered = false

[node name="subwindow_output" type="PanelContainer" parent="panel_container/margin_container/v_box_container/control/h_split_container" index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="margin_container" type="MarginContainer" parent="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output" index="0"]
layout_mode = 2

[node name="v_box_container" type="VBoxContainer" parent="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output/margin_container" index="0"]
layout_mode = 2
theme_override_constants/separation = 4
script = SubResource("GDScript_u5sgf")

[node name="image_preview" parent="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output/margin_container/v_box_container" index="0" instance=ExtResource("13_yc6ja")]
layout_mode = 2
image_path = "preview"

[node name="bytes_reduced" type="HBoxContainer" parent="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output/margin_container/v_box_container" index="1"]
layout_mode = 2

[node name="label" type="Label" parent="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output/margin_container/v_box_container/bytes_reduced" index="0"]
layout_mode = 2
size_flags_horizontal = 3
text = "File size reduced"

[node name="label_bytes" type="Label" parent="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output/margin_container/v_box_container/bytes_reduced" index="1"]
layout_mode = 2
text = "0 B"
horizontal_alignment = 1

[node name="files_completed" type="HBoxContainer" parent="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output/margin_container/v_box_container" index="2"]
layout_mode = 2

[node name="label" type="Label" parent="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output/margin_container/v_box_container/files_completed" index="0"]
layout_mode = 2
size_flags_horizontal = 3
text = "Files completed"

[node name="label_progress_done" type="Label" parent="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output/margin_container/v_box_container/files_completed" index="1"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="label_3" type="Label" parent="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output/margin_container/v_box_container/files_completed" index="2"]
layout_mode = 2
text = "/"
horizontal_alignment = 1

[node name="label_progress_todo" type="Label" parent="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output/margin_container/v_box_container/files_completed" index="3"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="total_progress_bar" type="ProgressBar" parent="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output/margin_container/v_box_container" index="3"]
layout_mode = 2
max_value = 4.0
step = 1.0

[connection signal="bytes_reduced_changed" from="." to="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output/margin_container/v_box_container" method="add_bytes_reduced"]
[connection signal="execute_finished" from="." to="panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel/subwindow_locker" method="set" binds= [&"is_locked", false]]
[connection signal="execute_started" from="." to="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output/margin_container/v_box_container" method="clear_bytes_reduced"]
[connection signal="execute_started" from="." to="panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel/subwindow_locker" method="set" binds= [&"is_locked", true]]
[connection signal="progress_done_changed" from="." to="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output/margin_container/v_box_container" method="set_progress_done"]
[connection signal="progress_path_changed" from="." to="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output/margin_container/v_box_container/image_preview" method="set_image_path"]
[connection signal="progress_todo_changed" from="." to="panel_container/margin_container/v_box_container/control/h_split_container/subwindow_output/margin_container/v_box_container" method="set_progress_todo"]
[connection signal="visibility_changed" from="panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel/subwindow_locker/texture_rect/sub_viewport/sprite_2d" to="panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel/subwindow_locker/texture_rect/sub_viewport/sprite_2d" method="play" binds= [&"default"]]

[editable path="panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel/scroll_container/margin_container/parameter_list/optipng_path"]
[editable path="panel_container/margin_container/v_box_container/control/h_split_container/parameter_panel/scroll_container/margin_container/parameter_list/input"]
